get random word form API

--- a/7_typing_game/index.html
+++ b/7_typing_game/index.html
@@ -10,6 +10,7 @@
       integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
       crossorigin="anonymous"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Speed Typer</title>
   </head>
