--- a/10_drag_and_drop/index.html
+++ b/10_drag_and_drop/index.html
@@ -20,6 +20,6 @@
       <i class="fas fa-paper-plane"></i>
     </button>
 
-    <script src="script-pure.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
