--- a/10_drag_and_drop/index.html
+++ b/10_drag_and_drop/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Netflix Most Popular Series in 2020</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    </script>
     <script
       src="https://kit.fontawesome.com/3da1a747b2.js"
       crossorigin="anonymous"
