--- a/10_drag_and_drop/index.html
+++ b/10_drag_and_drop/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script
       src="https://kit.fontawesome.com/3da1a747b2.js"
       crossorigin="anonymous"
